Finalized and restructured project to 'MVC'-structure